--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,7 @@ dependencies:
   cupertino_icons: 
   firebase_core: 
   cloud_firestore: 
-  flutter_map: ^6.1.0
-  flutter_map_tile_caching: ^10.1.1
+  flutter_map: 
   latlong2: 
   intl: 
   flutter_map_marker_cluster: 
