--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   flutter_map_marker_cluster: 
   geolocator: 
   geolocator_android: 4.5.5
+  flutter_bloc: ^9.1.1
+  pinput: ^5.0.1
+  dio: ^5.9.0
+  pretty_dio_logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
